[package]
name = "onyx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
jacquard = "0.9.5"
jacquard-oauth = { version = "0.9.6", features = ["browser-open", "loopback"] }
keyring = { version = "3.6.3", features = ["apple-native", "async-secret-service", "crypto-rust", "linux-native-async-persistent", "tokio", "windows-native"] }
onyx-lexicons = { path = "crates/lexicons" }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }

[workspace]
members = [ ".", "crates/lexicons" ]
