[package]
name = "onyx"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6.0.0"
http = "1.4.0"
jacquard = "0.9.5"
jacquard-api = { version = "0.9.5", features = ["fm_teal"] }
jacquard-identity = { version = "0.9.5", features = ["dns"] }
jacquard-oauth = { version = "0.9.6", features = ["browser-open", "loopback"] }
keyring = { version = "3.6.3", features = ["linux-native-sync-persistent", "apple-native", "windows-native", "crypto-rust", "vendored"] }
owo-colors = "4.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
