[package]
name = "onyx-lexicons"
version = "0.1.0"
edition = "2024"

[lints.rust]
non_snake_case = "allow"

[dependencies]
unicode-segmentation = "1.12.0"
jacquard-common = "0.9.5"
jacquard-derive = "0.9.5"
jacquard-lexicon = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
rustversion = "1.0"

[features]
default = ["fm_teal"]

# --- generated ---
# Generated namespace features
fm_teal = []
